// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout Component should render a connected component: connected 1`] = `
<ContextConsumer>
  <Component />
</ContextConsumer>
`;

exports[`PageLayout Component should render a non-connected component authorized: non-connected authorized 1`] = `
<div
  className="layout-pf layout-pf-fixed fadein"
>
  <VerticalNav
    blurDelay={700}
    blurDisabled={false}
    dynamicBodyClasses={true}
    forceHidden={false}
    hiddenIcons={false}
    hideMasthead={false}
    hoverDelay={500}
    hoverDisabled={false}
    items={null}
    masthead={null}
    onCollapse={null}
    onExpand={null}
    onItemBlur={null}
    onItemClick={null}
    onItemHover={null}
    onItemPin={null}
    onMenuToggleClick={null}
    onMobileSelection={null}
    onNavigate={[Function]}
    persist={true}
    persistentSecondary={false}
    pinnableMenus={false}
    showBadges={false}
  >
    <VerticalNav.Masthead>
      <VerticalNav.Brand
        href=""
        iconImg=""
        img=""
        onClick={null}
        title=""
        titleImg="title.svg"
      />
      <VerticalNav.IconBar
        collapse={true}
      >
        <MastheadDropdown
          className=""
          id="app-help-dropdown"
          noCaret={false}
          title={
            <span
              aria-hidden={true}
              className="pficon pficon-help"
            />
          }
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="About"
            divider={false}
            eventKey={0}
            header={false}
            isActive={true}
            key="about"
            menuType="help"
            onClick={[Function]}
          >
            About
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="Guides - Using"
            divider={false}
            eventKey={2}
            header={false}
            href="./docs/use.html"
            isActive={true}
            key="use"
            menuType="help"
            target="_blank"
          >
            Guides - Using
          </MenuItem>
        </MastheadDropdown>
        <MastheadDropdown
          className=""
          id="app-user-dropdown"
          noCaret={false}
          title={
            <React.Fragment>
              <Icon
                name="user"
                type="pf"
              />
               
              lorem
            </React.Fragment>
          }
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="Logout"
            divider={false}
            eventKey={3}
            header={false}
            isActive={true}
            key="logout"
            menuType="action"
            onClick={[Function]}
          >
            Logout
          </MenuItem>
        </MastheadDropdown>
      </VerticalNav.IconBar>
    </VerticalNav.Masthead>
    <VerticalNav.Item
      active={true}
      iconClass="fa fa-crosshairs"
      key="/sources"
      onClick={[Function]}
      title="Sources"
    />
    <VerticalNav.Item
      iconClass="pficon pficon-orders"
      key="/scans"
      onClick={[Function]}
      title="Scans"
    />
    <VerticalNav.Item
      iconClass="fa fa-id-card"
      key="/credentials"
      onClick={[Function]}
      title="Credentials"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="About"
      isActive={true}
      key="about"
      menuType="help"
      onClick={[Function]}
      title="About"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="Guides - Using"
      href="./docs/use.html"
      isActive={true}
      key="use"
      menuType="help"
      target="_blank"
      title="Guides - Using"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="Logout"
      isActive={true}
      key="logout"
      menuType="action"
      onClick={[Function]}
      title="Logout"
    />
  </VerticalNav>
  <div
    className="container-pf-nav-pf-vertical"
  >
    <span
      className="test"
    >
      lorem
    </span>
  </div>
</div>
`;

exports[`PageLayout Component should render a non-connected component branded: non-connected brand 1`] = `
<div
  className="layout-pf layout-pf-fixed fadein"
>
  <VerticalNav
    blurDelay={700}
    blurDisabled={false}
    dynamicBodyClasses={true}
    forceHidden={false}
    hiddenIcons={false}
    hideMasthead={false}
    hoverDelay={500}
    hoverDisabled={false}
    items={null}
    masthead={null}
    onCollapse={null}
    onExpand={null}
    onItemBlur={null}
    onItemClick={null}
    onItemHover={null}
    onItemPin={null}
    onMenuToggleClick={null}
    onMobileSelection={null}
    onNavigate={[Function]}
    persist={true}
    persistentSecondary={false}
    pinnableMenus={false}
    showBadges={false}
  >
    <VerticalNav.Masthead>
      <VerticalNav.Brand
        href=""
        iconImg=""
        img=""
        onClick={null}
        title=""
        titleImg="title-brand.svg"
      />
      <VerticalNav.IconBar
        collapse={true}
      >
        <MastheadDropdown
          className=""
          id="app-help-dropdown"
          noCaret={false}
          title={
            <span
              aria-hidden={true}
              className="pficon pficon-help"
            />
          }
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="About"
            divider={false}
            eventKey={0}
            header={false}
            isActive={true}
            key="about"
            menuType="help"
            onClick={[Function]}
          >
            About
          </MenuItem>
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="Guides - Using"
            divider={false}
            eventKey={2}
            header={false}
            href="./docs/use.html"
            isActive={true}
            key="use"
            menuType="help"
            target="_blank"
          >
            Guides - Using
          </MenuItem>
        </MastheadDropdown>
        <MastheadDropdown
          className=""
          id="app-user-dropdown"
          noCaret={false}
          title={
            <React.Fragment>
              <Icon
                name="user"
                type="pf"
              />
               
              lorem
            </React.Fragment>
          }
        >
          <MenuItem
            bsClass="dropdown"
            disabled={false}
            displayTitle="Logout"
            divider={false}
            eventKey={3}
            header={false}
            isActive={true}
            key="logout"
            menuType="action"
            onClick={[Function]}
          >
            Logout
          </MenuItem>
        </MastheadDropdown>
      </VerticalNav.IconBar>
    </VerticalNav.Masthead>
    <VerticalNav.Item
      active={true}
      iconClass="fa fa-crosshairs"
      key="/sources"
      onClick={[Function]}
      title="Sources"
    />
    <VerticalNav.Item
      iconClass="pficon pficon-orders"
      key="/scans"
      onClick={[Function]}
      title="Scans"
    />
    <VerticalNav.Item
      iconClass="fa fa-id-card"
      key="/credentials"
      onClick={[Function]}
      title="Credentials"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="About"
      isActive={true}
      key="about"
      menuType="help"
      onClick={[Function]}
      title="About"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="Guides - Using"
      href="./docs/use.html"
      isActive={true}
      key="use"
      menuType="help"
      target="_blank"
      title="Guides - Using"
    />
    <VerticalNav.Item
      className="collapsed-nav-item"
      displayTitle="Logout"
      isActive={true}
      key="logout"
      menuType="action"
      onClick={[Function]}
      title="Logout"
    />
  </VerticalNav>
  <div
    className="container-pf-nav-pf-vertical"
  >
    <span
      className="test"
    >
      lorem
    </span>
  </div>
</div>
`;

exports[`PageLayout Component should render a non-connected component unauthorized: non-connected unauthorized 1`] = `
<PageLayout
  history={Object {}}
  isFullPage={false}
  location={Object {}}
  logoutUser={[Function]}
  menu={
    Array [
      Object {
        "component": [Function],
        "iconClass": "fa fa-crosshairs",
        "redirect": true,
        "title": "Sources",
        "to": "/sources",
      },
      Object {
        "component": [Function],
        "iconClass": "pficon pficon-orders",
        "title": "Scans",
        "to": "/scans",
      },
      Object {
        "component": Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        },
        "iconClass": "fa fa-id-card",
        "title": "Credentials",
        "to": "/credentials",
      },
    ]
  }
  session={
    Object {
      "authorized": false,
      "username": "lorem",
    }
  }
  uiBrand={false}
  uiName="Quipucords"
>
  <div
    className="layout-pf layout-pf-fixed fadein"
  >
    <Masthead
      className=""
      href="#"
      iconImg=""
      middleContent={null}
      navToggle={false}
      onNavToggleClick={[Function]}
      onTitleClick={[Function]}
      thin={false}
      title="Quipucords"
      titleImg="title.svg"
    >
      <nav
        className="navbar navbar-pf-vertical"
      >
        <div
          className="navbar-header"
        >
          <a
            className="navbar-brand"
            href="#"
            onClick={[Function]}
            role="button"
          >
            <img
              alt="Quipucords"
              className="navbar-brand-name"
              src="title.svg"
            />
          </a>
        </div>
      </nav>
    </Masthead>
    <div>
      <span
        className="test"
      >
        lorem
      </span>
    </div>
  </div>
</PageLayout>
`;
